# hunter-agent

./: .gitignore  .prettierignore  AGENTS.md  LICENSE.md  README.md  config.toml  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mts  pyproject.toml
app/: __init__.py  config.py  main.py
app/db/: __init__.py  applications.py  database.py  hunter-agent.db
app/models/: __init__.py  application.py  blacklist.py  company.py  config.py  dashboard.py  eligibility.py  job.py  location.py  pipeline_run.py  profile.py  resume.py  score_run.py  (+3 more)
cvs/: resume.json
db/: hunter-agent.db  hunter-agent.sql  seed.sql
sql/: hunter-agent.sql  seed.sql
tests/: conftest.py  scoring_eval.py  tailoring_fakes.py  test_adzuna_source.py  test_ai_completion_anthropic.py  test_ai_completion_ollama.py  test_ai_completion_openai.py  test_applications.py  test_blacklist.py  test_blacklist_routes.py  test_companies.py  test_company_browsing.py  test_company_sources.py  test_config.py  test_dashboard.py  test_eligibility.py  test_fixtures.py  test_job_ingestion.py  test_job_sources.py  test_jobs.py  test_keyword_scoring.py  test_llm_scoring.py  test_openapi.py  test_pipeline.py  test_pipeline_routes.py  test_profiles.py  test_prompt_guard.py  test_remotive_source.py  test_resume_compiler.py  test_resume_models.py  test_resume_performance.py  test_resume_routes.py  test_resume_services.py  test_resume_tailor.py  test_review_queue.py  test_review_routes.py  test_routes.py  test_scheduler.py  test_score_storage.py  test_scoring_eval.py  (+8 more)
vault/: HNTR Quests.base
(+124 files in other folders)
