[project]
name = "hunter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
